@@ -55,6 +55,10 @@ locales.size > 0 %][% FOREACH locale = locales %][% locale.name %][%-
   [% IF deter_robots %]
     <meta name="robots" content="noindex,nofollow" />
   [% END %]
+  [% UNLESS not_editable %]
+    <link rel="alternate" type="application/wiki" title="Edit this page!"
+     href="[% source_site or full_cgi_url %]?id=[% node_param %];action=edit">
+  [% END %]
   [% IF enable_gmaps AND display_google_maps AND gmaps_api_key %]
     <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=[% gmaps_api_key %]" type="text/javascript"></script>
   [% END %]
